# cengaver_rover_description

./: CMakeLists.txt  README.md  compile_commands.json  package.xml
config/: custom_controller.yaml  ds4_config.yaml  gazebo_params.yaml  manipulator_controller_usb.yaml  mapper_params_online_async.yaml  mobility_control_usb.yaml  mobility_controller_usb.yaml  my_controllers.yaml  nav2_params.yaml  ukf.yaml  usb_camera_params.yaml
include/: communication_packets.h  icommunication_protocol.hpp  usb_protocol.hpp
install/: local_setup.sh  setup.sh
install/cengaver_rover_description/share/cengaver_rover_description/: package.bash  package.dsv  package.ps1  (+2 more)
launch/: cengaver_rover.launch.py  cengaver_rover_description.launch.py  cengaver_rover_description_foxglove.launch.py  description_foxglove.launch.py  launch_fortress_sim.launch.py  launch_sim.launch.py  launch_sim_foxglove.launch.py  rover.launch.py  rsp.launch.py  rviz_joint_state.launch.py  rviz_no_joint_state.launch.py  slam_sim.launch.py  slam_sim_foxglove.launch.py
log/: latest_build
meshes/: base_link.STL  hub_motor_wheel.STL  rplidar_a1.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
models/: camera.xacro  cengaver.urdf  cengaver.urdf.xacro  cengaver_core.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  ros2_control.xacro
models/cengaver_description/: model.config
rviz/: urdf_config.rviz
src/: control_node.cpp  icommunication_protocol.cpp  laser_filter_node.cpp  mobility_control_node.cpp  serialib.cpp  usb_protocol.cpp
worlds/: cengaver_cafe.xml  cengaver_museum.xml  fortress_museum.sdf
